# air-traffic-simulator

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.github/: renovate.json
.github/workflows/: cargo-msrv.yaml  cargo-upgrade.yaml  codeql.yml  test.yml
client/: README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
client/src/: App.vue  airport.ts  map.ts  plane.ts  socket.ts  staticData.ts  style.css  util.ts
client/src/bindings/: Airport.ts  AirportData.ts  AirportEvent.ts  AirportEventPayload.ts  Angle.ts  Config.ts  Flight.ts  FlightPlanner.ts  Kinematics.ts  ModelMotion.ts  PhaseData.ts  Plane.ts  PlaneData.ts  PlaneEvent.ts  PlaneEventPayload.ts  PlanePos.ts  Pos2Angle.ts  Pos3Angle.ts  Runway.ts  Target.ts  Waypoint.ts  WorldData.ts
client/src/components/: AirportInfo.vue  AirportLink.vue  Map.vue  PlaneInfo.vue  PlaneLink.vue  Sidebar.vue  Statistics.vue  WaypointNetwork.vue
client/src/components/planeState/: Duration.vue  Waypoints.vue
client/src/config/: config.js  index.ts
engine/: Cargo.toml
engine/proptest-regressions/ty/: pos.txt
engine/src/: config.rs  engine.rs  lib.rs  plane_pos.rs  state.rs  world_data.rs
engine/src/state/: airport.rs  mod.rs  plane.rs  plane_pos.rs
engine/src/ty/: angle.rs  config.rs  direction.rs  engine.rs  mod.rs  pos.rs  ray.rs  state.rs  world_data.rs
engine/src/util/: angle.rs  direction.rs  kinematics.rs  mod.rs  pos.rs  ray.rs
engine/tests/: 3d_scatter.py
example/: Cargo.toml
example/src/: config.yml  engine_config.yml  main.rs  wd.yml
server/: Cargo.toml  build.rs
server/src/: lib.rs
src/: lib.rs  main.rs
tests/: wd.yml
