[package]
name = "air-traffic-simulator-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1.8.0", features = ["serde"] }
derive_more = { version = "1.0.0", features = ["full"] }
dubins_paths = { version = "2.4.2", features = ["glam"] }
duplicate = "2.0.0"
glam = { version = "0.29.2", features = ["serde"] }
eyre = "0.6.12"
itertools = "0.13.0"
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0.215", features = ["rc", "derive"] }
smol_str = { version = "0.3.2", features = ["serde"] }
tracing = "0.1.40"
ts-rs = { version = "10.0.0", features = ["uuid-impl"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }

[dev-dependencies]
assertables = "9.4.0"
proptest = "1.5.0"
tracing-test = "0.2.5"

[lints]
workspace = true
