[package]
name = "air-traffic-simulator-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1.10.1", features = ["serde"] }
derive_more = { version = "2.0.1", features = ["full"] }
dubins_paths = { version = "2.6.0", features = ["glam"] }
duplicate = "2.0.0"
glam = { version = "0.30.1", features = ["serde"] }
eyre = "0.6.12"
itertools = "0.14.0"
rand = "0.9.0"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["rc", "derive"] }
smol_str = { version = "0.3.2", features = ["serde"] }
tracing = "0.1.41"
ts-rs = { version = "10.1.0", features = ["uuid-impl"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }

[dev-dependencies]
assertables = "9.5.1"

[lints]
workspace = true
