[package]
name = "air-traffic-simulator-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1.10.1", features = ["serde"] }
derive_more = { version = "2.0.1", features = ["full"] }
dubins_paths = { git = "https://github.com/iiiii7d/dubins_paths", features = ["glam", "serde", "rkyv", "bytecheck"] }
duplicate = "2.0.0"
glam = { version = "0.30.8", features = ["serde", "rkyv", 'bytecheck'] }
eyre = "0.6.12"
itertools = "0.14.0"
rand = "0.9.2"
rayon = "1.11.0"
rkyv = { version = "0.8.12", features = ["smol_str-0_3", "uuid-1"] }
serde = { version = "1.0.228", features = ["rc", "derive"] }
smol_str = { version = "0.3.2", features = ["serde"] }
tracing = "0.1.41"
ts-rs = { version = "11.0.1", features = ["uuid-impl"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }

[dev-dependencies]
assertables = "9.8.2"

[lints]
workspace = true
