[package]
name = "air-traffic-simulator-example"
version = "0.1.0"
edition = "2021"

[dependencies]
air-traffic-simulator = { path = ".." }

color-eyre = "0.6.3"
serde_yaml = "0.9.34"
tokio = { version = "1.39.3", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[lints]
workspace = true