[package]
name = "air-traffic-simulator-example"
version = "0.1.0"
edition = "2021"

[dependencies]
air-traffic-simulator = { path = "..", default-features = false }

color-eyre = "0.6.4"
serde_yaml = "0.9.34"
tokio = { version = "1.45.1", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[features]
default = ["client"]
client = ["air-traffic-simulator/client"]

[lints]
workspace = true
