[package]
name = "air-traffic-simulator-server"
version = "0.1.0"
edition = "2021"

[dependencies]
engine = { path = "../engine", package = "air-traffic-simulator-engine" }

axum = "0.8.1"
eyre = "0.6.12"
fs_extra = "1.3.0"
socketioxide = { version = "0.15.1", features = ["state", "tracing"] }
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
tokio = { version = "1.42.0", features = ["full"] }
tempfile = "3.15.0"
tracing = "0.1.41"

[build-dependencies]
eyre = "0.6.12"

[features]
default = ["client"]
client = []

[lints]
workspace = true
