[package]
name = "air-traffic-simulator-server"
version = "0.1.0"
edition = "2021"

[dependencies]
engine = { path = "../engine", package = "air-traffic-simulator-engine" }

async-fs = "2.1.2"
axum = "0.8.4"
eyre = "0.6.12"
fs_extra = "1.3.0"
rkyv = "0.8.10"
socketioxide = { version = "0.17.2", features = ["state", "tracing"] }
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
tokio = { version = "1.46.1", features = ["full"] }
tempfile = "3.20.0"
tracing = "0.1.41"

[build-dependencies]
eyre = "0.6.12"

[features]
default = ["client"]
client = []

[lints]
workspace = true
